Added qol things