@@ -4,7 +4,6 @@ import java.math.BigInteger;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import dev.brachtendorf.jimagehash.hash.Hash;
@@ -13,6 +12,7 @@ import dev.brachtendorf.jimagehash.hashAlgorithms.PerceptiveHash;
 import org.bytedeco.opencv.opencv_features2d.ORB;
 
 public class CardImportsIndex {
+    private String guess;
     private final Path compareDir;
     private final List<CardSignature> hashed;
     private final CardIndex cardDB;
@@ -29,9 +29,13 @@ public class CardImportsIndex {
         this.cardDB = cardDB;
     }
 
-    public List<CardImports> scan(){ return scan(null); }
+    public List<CardImports> scan(){
+        return scan(null);
+    }
 
     public synchronized List<CardImports> scan(ScanProgress progress){
+        guess = "";
+        long beginOrbJob = System.currentTimeMillis();
         List<CardImports> fresh = new ArrayList<>();
         System.out.println("Scanning "+ compareDir+" for new images...");
         try (Stream<Path> stream = Files.walk(compareDir)){
@@ -40,10 +44,16 @@ public class CardImportsIndex {
                     String s = path.toString().toLowerCase();
                     return s.endsWith(".jpg") || s.endsWith(".png");
                 })
-                .collect(Collectors.toList());
+                .toList();
             long count = imgList.size();
             int loc = 0;
+            long [] times = new long[(int)count];
+            for(int i = 0; i < count; i++){ times[i] = 0; }
             for(Path path : imgList){
+                if(!(loc < 1)){
+                    guess = niceTimer(beginOrbJob,loc, imgList, times);
+                    beginOrbJob = System.currentTimeMillis();
+                }
                 loc++;
                 Hash qHash;
                 try{
@@ -54,18 +64,27 @@ public class CardImportsIndex {
                 if(isDuplicate(qHash)){
                     continue;
                 }
-                CardImports result = compareOne(path, qHash, loc, count, progress);
+                CardImports result = compareOne(path, qHash, loc, count, progress, guess);
                 if (result != null){
                     fresh.add(result);
                     seenHashes.add(qHash);
                     imports.add(result);
-                    System.out.println(result.getHashedRecordHistory());
-                    System.out.println(result.getORBRecordHistory());
+                    //System.out.println(result.getHashedRecordHistory());
+                    //System.out.println(result.getORBRecordHistory());
 
                 }
             }
         }catch(IOException e){
             e.printStackTrace();
+        }
+        for(CardImports f : fresh){
+            if(f.howLowIsHash() == -1){
+                System.out.println("No match found for "+f.getQueryImage().getFileName().toString());
+                continue;
+            }
+            System.out.println("\n"+f.getQueryImage().getFileName().toString());
+            System.out.println("The hash result that matches the orb winner " +f.getHashWinner().cardID());
+            System.out.print(" is "+f.getARecordRecord(f.howLowIsHash(), "hash").getCardID() +"at position "+f.howLowIsHash());
         }
         return fresh;
     }
@@ -81,20 +100,20 @@ public class CardImportsIndex {
 
     public synchronized CardImports scanOne(Path image, ScanProgress progress) throws IOException{
         Hash qHash = hasher.hash(new File(image.toString()));
-        CardImports result = compareOne(image, qHash, 1, 1, progress);
+        CardImports result = compareOne(image, qHash, 1, 1, progress, guess);
         if (result != null){ seenHashes.add(qHash); imports.add(result); }
         if (progress != null) progress.report("Scan complete", 1.0);
         return result;
     }
 
-    private CardImports compareOne(Path path, Hash test, int loc, long count, ScanProgress progress) {
+    private CardImports compareOne(Path path, Hash test, int loc, long count, ScanProgress progress, String guess) {
         File victim = new File(path.toString());
         PriorityQueue<Scored> topHash = new PriorityQueue<>(Comparator.comparingDouble((Scored s) -> s.score()).reversed());
-		for (int i = 0; i < hashed.size(); i++) {
-		    double comp = test.normalizedHammingDistance(hashed.get(i).getBinaryHash());
-		    topHash.offer(new Scored(hashed.get(i), comp));
-		    if (topHash.size()>1000) topHash.poll();
-		}
+        for (CardSignature cardSignature : hashed) {
+            double comp = test.normalizedHammingDistance(cardSignature.getBinaryHash());
+            topHash.offer(new Scored(cardSignature, comp));
+            if (topHash.size() > 20000) topHash.poll();
+        }
 		List <Scored> hashSorted = new ArrayList<>(topHash);
 		hashSorted.sort(Comparator.comparingDouble(Scored::score));
 		Scored bestHash = hashSorted.get(0);
@@ -103,10 +122,10 @@ public class CardImportsIndex {
 		CardImports.Match hashMatch = new CardImports.Match(bestHash.sig.getCardID(), bestHash.sig.getStringImgPath(), bestHash.score());
 		List<CardSignature> recordRecord = new ArrayList<>();
 		List<Double> recordScore = new ArrayList<>();
-		for(int s = 0; s<hashSorted.size();s++){
-		    recordRecord.add(hashSorted.get(s).sig());
-		    recordScore.add(hashSorted.get(s).score());
-		}
+        for (Scored value : hashSorted) {
+            recordRecord.add(value.sig());
+            recordScore.add(value.score());
+        }
 
 		// ---- ORB pass (higher is closer) ----
 		ORB orb = ORB.create();
@@ -117,7 +136,7 @@ public class CardImportsIndex {
 		for (int i = 0; i < hashed.size(); i++) {
 		    int comp = cardDB.geometricMatches(test2.descriptors, test2.keypoints, hashed.get(i).getMatData(), hashed.get(i).getKeypoints());
 		    bottomOrb.offer(new Scored(hashed.get(i), comp));
-		    if(bottomOrb.size()>1000) bottomOrb.poll();
+		    if(bottomOrb.size()>20000) bottomOrb.poll();
 		    String percent = String.format("%.0f", ((double) i / hashed.size()) * 100);
 		    System.out.println("\033[0F\033[K" + percent + "% " + cardDB.timer(startTime) + " ("+loc+"/"+count+")");
             if (progress != null) {                                    // <-- new
@@ -125,29 +144,34 @@ public class CardImportsIndex {
                 if (pct != lastPct) {                                  // throttle: only on % change
                     lastPct = pct;
                     double overall = ((loc - 1) + (double) i / hashed.size()) / count;
-                    progress.report("Scanning " + victim.getName() + "  (" + loc + "/" + count + ")", overall);
+                    if(guess == null) guess = "";
+                    try{
+                        progress.report("Scanning " + victim.getName() + "  (" + loc + "/" + count + ") " + guess+".", overall);
+                    }catch(Exception e) {
+                        e.printStackTrace();
+                    }
                 }
             }
 		}
 		List<Scored> orbSorted = new ArrayList<>(bottomOrb);
 		orbSorted.sort(Comparator.comparingDouble(Scored::score).reversed());
-		Scored bestOrb = orbSorted.get(0);
+		Scored bestOrb = orbSorted.getFirst();
 		System.out.println("\nUploaded image " + victim + " appears to be closest to " + bestOrb.sig.getStringImgPath() + ". (ORB)");
 		System.out.println(bestOrb.score());
 		CardImports.Match orbMatch = new CardImports.Match(bestOrb.sig.getCardID(), bestOrb.sig.getStringImgPath(), bestOrb.score());
 		List<CardSignature> recordRecord2 = new ArrayList<>();
 		List<Double> recordScore2 = new ArrayList<>();
-		for(int s = 0; s<orbSorted.size(); s++){
-		    recordRecord2.add(orbSorted.get(s).sig());
-		    recordScore2.add(orbSorted.get(s).score());
-		}
+        for (Scored scored : orbSorted) {
+            recordRecord2.add(scored.sig());
+            recordScore2.add(scored.score());
+        }
 		return new CardImports(path, test, hashMatch, orbMatch, recordScore, recordRecord, recordScore2, recordRecord2);
     }
 
     public List<CardImports> getImports() { return imports; }
 
     public CardImports getLastImports() {
-        return imports.isEmpty() ? null : imports.get(imports.size() - 1);
+        return imports.isEmpty() ? null : imports.getLast();
     }
 
     public List<String[]> toCsvData() {
@@ -293,5 +317,38 @@ public class CardImportsIndex {
             outSigs.add(sig);
             outScores.add(score);
         }
+    }
+
+    private String niceTimer(long startTime, int loc, List<Path>imgList, long[] times) {
+        long elapsed = System.currentTimeMillis() - startTime;
+        times[loc] = elapsed;
+
+        // Weighted average: recent items count more, but use all completed samples
+        int completed = loc + 1;
+        long sum = 0;
+        for (int i = 0; i < completed; i++) {
+            sum += times[i];
+        }
+        long avgPerItem = sum / completed;
+
+        long remainingItems = imgList.size() - completed;
+        long guess = avgPerItem * remainingItems;
+
+        long hours   = guess / 3600000;
+        long minutes = (guess % 3600000) / 60000;
+        long seconds = (guess % 60000) / 1000;
+
+        StringBuilder sb = new StringBuilder("about ");
+        if (hours > 0) {
+            sb.append(hours).append(hours == 1 ? " hour " : " hours ");
+            sb.append(minutes).append(minutes == 1 ? " minute" : " minutes");
+        } else if (minutes > 0) {
+            sb.append(minutes).append(minutes == 1 ? " minute " : " minutes ");
+            sb.append(seconds).append(seconds == 1 ? " second" : " seconds");
+        } else {
+            sb.append(seconds).append(seconds == 1 ? " second" : " seconds");
+        }
+        sb.append(" remaining");
+        return sb.toString();
     }
 }
